correction suite soutenance à l'inversion de l'animation coeur ,reprise des marges et alignement des titres menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -469,7 +469,15 @@ $input-place-holder:"roboto";
   }
   
   /* ****************coeur**************************** */
+  .fa-regular.fa-heart {
+	font-size: 20px; 
+	font-weight: 400; 
+  }
   
+  .fa-solid.fa-heart {
+	font-size: 20px; 
+	font-weight: 700; 
+  }
 .container {
 	height: 100%;
  	position: relative;
@@ -478,7 +486,6 @@ $input-place-holder:"roboto";
 	position:absolute;
 	top: 10%;
 	right: 50%;
-
   }
   
 .fa-solid__opacity {
@@ -730,9 +737,9 @@ $input-place-holder:"roboto";
 	.menu-title {
 	  display: flex;
 	  justify-content: center;
-	  gap: 30px;
+	  gap: 60px;
 	}
-  
+	
 	.menu-listing {
 	  display: flex;
 	  flex-direction: column;
